--- a/UITest/AppShell.xaml
+++ b/UITest/AppShell.xaml
@@ -1,15 +1,21 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<Shell
-    x:Class="UITest.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:UITest"
-    Shell.FlyoutBehavior="Disabled"
-    Title="UITest">
+<Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:local="clr-namespace:UITest.Views"
+       xmlns:style="clr-namespace:UITest.Resources.Styles"
+       xmlns:app="clr-namespace:UITest"
+       Title="UITest"
+       x:Class="UITest.AppShell" 
+       FlyoutBackgroundColor="{AppThemeBinding Light={StaticResource Secondary}, Dark={StaticResource Primary}}">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <FlyoutItem x:Name="RootItem" Title="Storage Test" Icon="{FontImage FontFamily=FontAwesomeSolid, Color=Black, 
+        Glyph={x:Static style:FontAwesomeSolid.Home}}">
+        <ShellContent Route="RootPage" ContentTemplate="{DataTemplate local:ItemsPage}">
+        </ShellContent>
+    </FlyoutItem>
+    <FlyoutItem Title="About" Icon="{FontImage FontFamily=FontAwesomeSolid, Color=Black,
+        Glyph={x:Static style:FontAwesomeSolid.Question}}">
+        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}">
+        </ShellContent>
+    </FlyoutItem>
 
 </Shell>
